gif width sorted

--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 				<div class="bgrid folio-item">
 					<div class="item-wrap">
-						<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/fototells.gif" alt="Beetle">
-					   <a href="#modal-04" class="overlay">                  	                 
+						<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/fototells.gif" alt="Beetle">
+					   <a href="#modal-01" class="overlay">                  	                 
 						  <div class="folio-item-table">
 							  <div class="folio-item-cell">
-								  <h3 class="folio-title">Beetle</h3>	     					    
+								  <h3 class="folio-title">Fototells</h3>	     					    
 										  <span class="folio-types">
-											   Branding
+											   Electronic Photo Album
 										</span>		     		
 									 </div>  	                      	
 						  </div>                    
@@ -428,13 +428,13 @@
 
 					<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/task-list.gif" alt="Beetle">
-	                  <a href="#modal-04" class="overlay">                  	                 
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/task-list.gif" alt="Beetle">
+	                  <a href="#modal-02" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Task List</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Utility
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -445,13 +445,13 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/Loan-calculator.gif" alt="Liberty">
-						   <a href="#modal-01" class="overlay">	                  	           
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/Loan-calculator.gif" alt="Liberty">
+						   <a href="#modal-03" class="overlay">	                  	           
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
-											 <h3 class="folio-title">Liberty</h3>	     					    
+											 <h3 class="folio-title">Loan Calculator</h3>	     					    
 											   <span class="folio-types">
-												   Graphic Design
+												   Finance
 											 </span>
 										 </div>	                      	
 							  </div>                    
@@ -461,13 +461,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/ghfinder.gif" alt="Shutterbug">
-	               	<a href="#modal-02" class="overlay">              		                  
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/ghfinder.gif" alt="Shutterbug">
+	               	<a href="#modal-04" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Github Finder</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Search Engine
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -476,13 +476,13 @@
 	        		</div> <!-- /folio-item -->
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/number-guesser.gif"alt="Clouds">
-						   <a href="#modal-03" class="overlay">             		                  
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/number-guesser.gif"alt="Clouds">
+						   <a href="#modal-05" class="overlay">             		                  
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
-									  <h3 class="folio-title">Clouds</h3>	     					    
+									  <h3 class="folio-title">Number Guesser</h3>	     					    
 											  <span class="folio-types">
-												   Web Design
+												   Game
 											</span>		     		
 										 </div> 	                      	
 							  </div>                    
@@ -492,13 +492,13 @@
 						  <!-- /folio-item -->
 						  <div class="bgrid folio-item">
 							<div class="item-wrap">
-								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/micropost.gif" alt="Salad">
+								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/micropost.gif" alt="Salad">
 							   <a href="#modal-06" class="overlay">
 								  <div class="folio-item-table">
 									  <div class="folio-item-cell">
-										  <h3 class="folio-title">Salad</h3>	     					    
+										  <h3 class="folio-title">Micropost</h3>	     					    
 												  <span class="folio-types">
-													   Branding
+													   CMS
 												</span>		     		
 											 </div>	                      	
 								  </div>                    
@@ -509,13 +509,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/chemoAuth.gif" alt="Lighthouse">
-	                  <a href="#modal-05" class="overlay">             		                  
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/chemoAuth.gif" alt="Lighthouse">
+	                  <a href="#modal-07" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">ChemoAuth</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  User Authentication
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -526,13 +526,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/eBookSeller.gif" alt="Salad">
-	                  <a href="#modal-06" class="overlay">
+	               	<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/eBookSeller.gif" alt="Salad">
+	                  <a href="#modal-08" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">eBook Seller</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  E-Commerce
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -543,13 +543,13 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);" src="images/giphy/Book-list.gif"alt="Clouds">
-						   <a href="#modal-03" class="overlay">             		                  
+							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/Book-list.gif"alt="Clouds">
+						   <a href="#modal-09" class="overlay">             		                  
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
-									  <h3 class="folio-title">Clouds</h3>	     					    
+									  <h3 class="folio-title">Book List</h3>	     					    
 											  <span class="folio-types">
-												   Web Design
+												   Utility
 											</span>		     		
 										 </div> 	                      	
 							  </div>                    
@@ -563,7 +563,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/fototells.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -574,7 +574,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -583,7 +583,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/task-list.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -594,7 +594,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -603,7 +603,7 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/Loan-calculator.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -614,7 +614,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -623,7 +623,7 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/ghfinder.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -634,7 +634,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -643,7 +643,7 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/number-guesser.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -654,7 +654,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -663,7 +663,7 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+				     		<img style="min-width: 100%;" src="images/giphy/micropost.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -674,11 +674,68 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
 				   </div> <!-- /modal-06 -->
+				   <div id="modal-07" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img style="min-width: 100%;" src="images/giphy/chemoAuth.gif" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Salad</h4>		      
+					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+					      <div class="categories">Branding</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="#">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-07 -->
+				   <div id="modal-08" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img style="min-width: 100%;" src="images/giphy/eBookSeller.gif" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Salad</h4>		      
+					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+					      <div class="categories">Branding</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="#">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-08 -->
+				   <div id="modal-09" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img style="min-width: 100%;" src="images/giphy/Book-list.gif" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Salad</h4>		      
+					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+					      <div class="categories">Branding</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="#">Details</a>
+					      <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-09 -->
 
 
 				   <!-- modal popups - end
