Portfoli repo links integrated

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/chemicalstan.github.io" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -594,7 +594,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/JS-SANDBOX/tree/master/0.4%20TASK%20LIST" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -614,7 +614,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/JS-SANDBOX/tree/master/0.3%20LOAN%20CALCULATOR" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -634,7 +634,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/JS-SANDBOX/tree/master/0.9%20API%20PROJECTS/1%20GITHUB%20FINDER" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -654,7 +654,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/JS-SANDBOX/tree/master/0.5%20NUMBER%20GUESSER" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -674,7 +674,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/micropost" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -693,7 +693,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/ChemoAuth" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -712,7 +712,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/eBook-Seller" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -731,7 +731,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/chemicalstan/JS-SANDBOX/tree/master/0.7%20OOP%20Book%20List%20Project" target="_blank">Git Repo</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
