--- a/index.html
+++ b/index.html
@@ -398,8 +398,7 @@
 
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
-
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<!-- <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p> -->
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -442,7 +441,6 @@
 	               </div>
 					</div> <!-- /folio-item -->
 
-
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/Loan-calculator.gif" alt="Liberty">
@@ -473,7 +471,8 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+					</div> <!-- /folio-item -->
+					
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/number-guesser.gif"alt="Clouds">
@@ -490,6 +489,7 @@
 						</div>
 						 </div>
 						  <!-- /folio-item -->
+
 						  <div class="bgrid folio-item">
 							<div class="item-wrap">
 								<img style="box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); min-width: 100%;" src="images/giphy/micropost.gif" alt="Salad">
@@ -567,10 +567,9 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Development</div>			               
+					      <h4>Fototells</h4>		      
+					      <p>Here I Contributed solely to the front-end of this application using technologies such as HTML/CSS and Javascript.</p>
+					      <div class="categories">Electronic Photo Album</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -587,10 +586,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Task List</h4>		      
+					      <p>This utility application was built using Materialize CSS with Bootstrap, Vanilla JavaScript for back-end CRUD and JavaScript sessions to persist data to the browser.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Utility</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -607,10 +606,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Loan Calculator</h4>		      
+					      <p>This mini finance application was built using Bootstrap and Vanilla JavaScript algorithms.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Finance</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -627,10 +626,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Github Finder</h4>		      
+					      <p>An application which uses github API to fetch user profile and repositories. This app was built using Asynchronous Javascript, Bootswatch, and Github APIs.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">Search Engine</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -647,10 +646,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Number Guesser</h4>		      
+					      <p>This app was built using Skeleton CSS and Vanilla Javascript algorithms.</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Game</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -667,10 +666,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Micropost</h4>		      
+					      <p>A complete CRUD web application built with ES 2015 modules using Babel, webpack and webpack-dev-server to compile and serve.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">CMS</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -686,10 +685,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>ChemoAuth</h4>		      
+					      <p>A user authentication demo app built using expressjs with passport authentication local strategy, mongoDB, EJS template engine and Bootswatch. This can be used as a boiler plate for any application that requires a server side authentication.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">User Authentication</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -705,10 +704,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>eBook Seller</h4>		      
+					      <p>eBook Seller is a mini E-commerce web app for electronic books. eBook seller is built using ExpressJS, Stripe payment authentication system, and Express-handlebars templating engine.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">E-Commerce</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -724,10 +723,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Book List</h4>		      
+					      <p>This utility application tracks book authors, title and ISBN number solely for documentation purpose. Technologies used includes Skeleton CSS and Object Oriented ES6 vanilla Javascript</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">Utility</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -1168,8 +1167,3 @@
 </body>
 
 </html>
-
-
-
-Partook in technical strategy meetings and provide input on architectural decisions for building performant web applications that fit the current client's particular use case. Involved in the design, documentation, implementation, and testing of the REST API powering Andela's BarefootNomad product while following strict guidelines including regularly maintaining over 90% code test coverage. Mastered industry best practice, unit testing, git workflow, agile methodology, docker, Figma, Pivotal tracker, VS Code, slack, and collaboration. Contributed to developing BarefootNomad so ware to make company global travel and accommodation easy and convenient for the strong workforce of savvy members of staﬀ, by leveraging the modern web. Actively participated in various tech enlightening boot camps and meet-ups.
-Sᴛᴀɴ Eʙᴜᴋᴀ
