--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
+						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -132,30 +130,6 @@
    	</div> <!-- /section-intro -->
 
    	<div class="row about-content">
-
-   		<!-- <div class="col-six tab-full"> -->
-
-   			<!-- <h3>Profile</h3> -->
-   			<!-- <p>Some basic infomations about me.</p> -->
-
-   			<!-- <ul class="info-list">
-   				<li>
-   					<strong>Fullname:</strong>
-   					<span>Stanley Okonkwo Chukwuebuka</span>
-   				</li>
-   				<li>
-   					<strong>Github:</strong>
-   					<span>www.github.com/chmeicalstan</span>
-   				</li>
-   				<li>
-   					<strong>Email:</strong>
-   					<span>chemicalstan15@gmail.com</span>
-   				</li>
-
-			   </ul>  -->
-			   <!-- /info-list -->
-
-   		<!-- </div> -->
 
    		<div class="col-six tab-full">
 
@@ -736,7 +710,8 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
+			   <h1>I'd Love To Hear From You.</h1>
+			   <p class="lead">I am very friendly and open-minded. Feel free to interact with me on any of the platforms provided below.</p>
    		</div> 
    	</div> <!-- /section-intro -->
 
