minor bug fixes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Full-stack software engineer, building microservices for high availability, scalability, resilience and security. I love solving problems, learning recent technologies especially in web and mobile. Most of my experience are based on back-end and front-end web development. Love to write clean and tested code meant to be read by humans, not machines, also well-designed simple architectures that can be easily understood by anyone.</p>
+   				<p class="lead">Full-stack software engineer. Building microservices for high availability, scalability, resilience, and security. I Love solving problems and learning recent technologies, especially in web and mobile development. Most of myexperience is based on back-end and front-end web development. I Love to write clean tested code meant to be read by humans not machines, also well-designed simple architectures that can be easily understood by anyone.</p>
    			</div>   			
 
    		</div>   		
