minor typo fixes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Full-stack software engineer. Building microservices for high availability, scalability, resilience, and security. I Love solving problems and learning recent technologies, especially in web and mobile development. Most of myexperience is based on back-end and front-end web development. I Love to write clean tested code meant to be read by humans not machines, also well-designed simple architectures that can be easily understood by anyone.</p>
+   				<p class="lead">Full-stack software engineer. Building microservices for high availability, scalability, resilience, and security. I Love solving problems and learning recent technologies, especially in web and mobile development. Most of my experience is based on back-end and front-end web development. I Love to write clean tested code meant to be read by humans not machines, also well-designed simple architectures that can be easily understood by anyone.</p>
    			</div>   			
 
    		</div>   		
@@ -322,7 +322,7 @@
 							<h4>
 								<a href="http://atbu.edu.ng" target="_blank" rel="noopener noreferrer">Abubakar Tafawa-Balewa University</a>
 							</h4>
-						   <h6>B.Tech, Industrial Chemistry</h6>
+						   <h6>B.Tech, Industrial Chemistry - First Class</h6>
 	   					<p>
 							● Petroleum Technology Development Fund (PTDF) scholar (2016/17). <br>
 							● Federal Government Scholarship Beneficiary (2017/18). <br>
