--- a/index.html
+++ b/index.html
@@ -143,20 +143,22 @@
       <div class="row section-intro">
         <div class="col-twelve">
           <h5>About</h5>
-          <h1>Let me introduce myself.</h1>
+          <h1>Get to know me 🚀</h1>
 
           <div class="intro-info">
             <img src="images/profile-pic.jpg" alt="Profile Picture" />
 
             <p class="lead">
-              Full-stack software engineer. Building microservices for high
+              Hey there! Welcome to my portfolio &#128513 <br/>
+              I'm Stanley, a self-taught goal-driven Full-stack software engineer. I have experience building highly performant, scalable, resilient, and secure microservices using recent technologies. I'm also passionate about problem-solving techniques, especially in web and mobile development. Stick around for more information about my skill set. &#127940
+              <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
               web and mobile development. Most of my experience is based on
               back-end and front-end web development. I Love to write clean
               tested code meant to be read by humans not machines, also
               well-designed simple architectures that can be easily understood
-              by anyone.
+              by anyone. -->
             </p>
           </div>
         </div>
