Small typo fix.

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <p class="lead">
             I have been opportune to interact and work closely with quite a
             number of teams in the software development Ecosystem. Here are some
-            of the companies and technologies i've worked with.
+            of the companies and technologies I've worked with.
           </p>
         </div>
       </div>
