Update Andela work experience.

--- a/index.html
+++ b/index.html
@@ -344,23 +344,11 @@
               <div class="timeline-content">
                 <h4>Andela</h4>
                 <p>
-                  • Partook in technical strategy meetings and provide input on
-                  architectural decisions for building performant web
-                  applications that fit the current client’s particular use
-                  case. <br />
-                  • Involved in the design, documentation, implementation, and
-                  testing of the REST API powering Andela’s BarefootNomad
-                  product while following strict guidelines including regularly
-                  maintaining over 90% code test coverage. <br />
-                  • Mastered industry best practice, unit testing, git workflow,
-                  agile methodology, docker, Figma, Pivotal tracker, VS Code,
-                  slack, and collaboration. <br />
-                  • Contributed to developing BarefootNomad software to make
-                  company global travel and accommodation easy and convenient
-                  for the strong workforce of savvy members of staff, by
-                  leveraging the modern web. <br />
-                  • Actively participated in various tech enlightening bootcamps
-                  and meet-up
+                  • I actively participated in various tech enlightening boot camps and meet-ups. <br />
+                  • Involved in the design, documentation, implementation, and testing of the RESTful APIs powering Andela’s BarefootNomad product while following strict guidelines. <br />
+                  • I Mastered industry best practices, unit testing, git workflow, agile methodology,
+                  docker, Figma, Pivotal tracker, VS Code, slack, and collaboration. <br />
+                  • I Partook in technical strategy meetings and gained mentorship from a group of talented senior software engineers who conducted seminars on how to make architectural decisions for building performant web applications that fits a client’s use case.
                 </p>
               </div>
             </div>
