Modify work experience and skill.

--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
           <h3>Current Skill Level</h3>
           <ul class="skill-bars">
             <li>
-              <div class="progress percent88"><span>88%</span></div>
+              <div class="progress percent90"><span>90%</span></div>
               <strong>JavaScript</strong>
             </li>
             <li>
-              <div class="progress percent85"><span>85%</span></div>
+              <div class="progress percent90"><span>90%</span></div>
               <strong>Node.JS</strong>
             </li>
             <li>
-              <div class="progress percent88"><span>88%</span></div>
+              <div class="progress percent90"><span>90%</span></div>
               <strong>Express.Js</strong>
             </li>
             <li>
@@ -196,8 +196,8 @@
           <br />
           <ul class="skill-bars">
             <li>
-              <div class="progress percent80"><span>80%</span></div>
-              <strong>Figma &amp; Adobe XD</strong>
+              <div class="progress percent90"><span>90%</span></div>
+              <strong>TypeScript</strong>
             </li>
             <li>
               <div class="progress percent85"><span>85%</span></div>
@@ -280,14 +280,10 @@
               <div class="timeline-content">
                 <h4>Chainconsults</h4>
                 <p>
-                  - Designing system architecture, building APIs, and writing
-                  unit tests for a finance application that lets workers loan
-                  part of their salary before payday. This project involves the
-                  integration of third-party payment systems such as
-                  WalletsAfrica and Paystack's payout and settlement APIs. The
-                  technologies used include; Nodejs, Express, Postgresql with
-                  objection ORM, Heroku cloud application platform, Paystack,
-                  etc.
+                  • Working closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of loaning part of their salary before payday. This project involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, GraphQL, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
+                  • Writing unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase. <br />
+                  • I managed and supervised a team of engineering interns in building a demo delivery tracker application that helped our business partners and their customers track and document various stages of their commodities delivery. Technologies used include Nodejs with Express and Inversify IoC container, MongoDB, and Heroku. <br />
+
                 </p>
               </div>
             </div>
@@ -310,17 +306,14 @@
               <div class="timeline-content">
                 <h4>UpliftHub</h4>
                 <p>
-                  - Increasing system reliability by primarily decomposing
-                  existing monolithic applications intomicroservices using
-                  Node.js and Express.js <br />
-                  - Working with an agile team to deploy trans payment, a tool
-                  used by the Bauchi state Govt. to save millions of naira in
-                  ghost workers money wastage. <br />
-                  - Sharing responsibilities with team members to build and
+                  • I Led a team of 4 software engineers in increasing system reliability by up to 70% by primarily decomposing existing monolithic applications into microservices using Node.js and Express.js <br />
+                  • Sharing responsibilities with team members to build and
                   support in-house school managementsoftware used in production
                   today by over 21 schools across Nigeria. <br />
-                  - Troubleshooting patched computer code, and collaborating
-                  with other developers to create single-page web applications.
+                  • I was involved in troubleshooting patched computer codes and collaborating with other developers to create single-page web applications. <br />
+                  • Worked with an agile team to deploy trans payment, a tool
+                  used by the Bauchi state Govt. to save millions of naira in
+                  ghost workers money wastage. <br />
                 </p>
               </div>
             </div>
@@ -372,10 +365,10 @@
               <div class="timeline-content">
                 <h4>HNG Internship</h4>
                 <p>
-                  - Worked closely with software development teams on Slack,
+                  • Worked closely with software development teams on Slack,
                   maintaining websites built on basic vanilla Javascript PHP and
                   MongoDB. <br />
-                  - Built a full-stack JavaScript Micropost application as a
+                  • Built a full-stack JavaScript Micropost application as a
                   sole contributor. Micropost is a Mini CRUD app built with
                   Node, Express, MongoDB, Bootswatch and Figma for mockup
                   design.
