Update work experience.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#128513 <br/>
-              I'm Stanley, a self-taught goal-driven Full-stack software engineer. I have experience building highly performant, scalable, resilient, and secure microservices using recent technologies. I'm also passionate about problem-solving techniques, especially in web and mobile development. Stick around for more information about my skill set. &#127940
+              I'm Stanley, goal-driven Full-stack software engineer. I have experience building highly performant, scalable, resilient, and secure microservices using recent technologies. I'm also passionate about problem-solving techniques, especially in web and mobile development. Stick around for more information about my skill set. &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -280,10 +280,10 @@
               <div class="timeline-content">
                 <h4>Chainconsults</h4>
                 <p>
-                  • Working closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of loaning part of their salary before payday. This project involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, GraphQL, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
+                  • Working closely with a team of software engineers as a lead backend developer to design software architecture, implement Application Programming Interfaces (APIs) for a finance application that provides workers with the benefit of withdrawing part of their salary before payday. This project
+                  involves the integration of third-party payment systems such as Paystack and WalletsAfrica payout and settlement APIs. The technologies used include; NestJs with Express, Postgresql with objection ORM, Heroku cloud application platform, Paystack, and Redis. <br />
                   • Writing unit tests using Jest and Supertest frameworks to ensure the correctness of the codebase. <br />
                   • I managed and supervised a team of engineering interns in building a demo delivery tracker application that helped our business partners and their customers track and document various stages of their commodities delivery. Technologies used include Nodejs with Express and Inversify IoC container, MongoDB, and Heroku. <br />
-
                 </p>
               </div>
             </div>
