Add new feature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     Version:        1.0
     Author:         Stanley Okonkwo
     Primary use:    Portfolio.
-    Email:          chemicalstan15@gmail.com
+    Email:          ebuka.eth@gmail.com
     Follow:         http://www.twitter.com/chemicalstan
     Github:         http://www.github.com/chemicalstan
     Linkedin:       https://www.linkedin.com/in/chemicalstan
@@ -118,7 +118,7 @@
           ></a>
         </li>
         <li>
-          <a href="mailto:chemicalstan15@gmail.com"
+          <a href="mailto:ebuka.eth@gmail.com"
             ><i class="fa fa-envelope"></i
           ></a>
         </li>
@@ -209,7 +209,7 @@
             </li>
             <li>
               <div class="progress percent80"><span>80%</span></div>
-              <strong>PHP</strong>
+              <strong>GoLang</strong>
             </li>
             <li>
               <div class="progress percent70"><span>70%</span></div>
@@ -266,6 +266,28 @@
               <div class="timeline-ico">
                 <img
                   style="border-radius:50%;"
+                  src="images/icons/Helicarrier.jpg"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+
+              <div class="timeline-header">
+                <h3>Backend Engineer</h3>
+                <p>Mar 2022 - Present</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>Helicarrier</h4>
+                <p>
+                </p>
+              </div>
+            </div>
+            <!-- /timeline-block -->
+            <div class="timeline-block">
+              <div class="timeline-ico">
+                <img
+                  style="border-radius:50%;"
                   src="images/icons/Chainconsults.jpeg"
                   alt=""
                   srcset=""
@@ -274,7 +296,7 @@
 
               <div class="timeline-header">
                 <h3>Backend Software Engineer</h3>
-                <p>Feb 2021 - Present</p>
+                <p>Feb 2021 - Mar 2022</p>
               </div>
 
               <div class="timeline-content">
@@ -959,7 +981,7 @@
 
           <h5>Email Me At</h5>
 
-          <p>chemicalstan15@gmail.com</p>
+          <p>ebuka.eth@gmail.com</p>
         </div>
 
         <div class="col-four tab-full">
@@ -994,7 +1016,7 @@
               ></a>
             </li>
             <li>
-              <a href="mailto:chemicalstan15@gmail.com"
+              <a href="mailto:ebuka.eth@gmail.com"
                 ><i class="fa fa-envelope"></i
               ></a>
             </li>
